--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -198,6 +198,7 @@
   font-size: 12px;
   color:#1E1E1E;
   font-weight: 400;
+  text-decoration: underline;
 }
 
 .paragraph--cms-page-content-fabricante{
