inclusão do sistema de login

--- a/styles/css/vtex.breadcrumb.css
+++ b/styles/css/vtex.breadcrumb.css
@@ -51,6 +51,9 @@
   .arrow .link {
     color: #202020;
   }
+  .filterBreadcrumbsItemName {
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 767px) {
