--- a/react/components/B2E/b2e.css
+++ b/react/components/B2E/b2e.css
@@ -1,22 +1,36 @@
+:global(.vtex-store-components-3-x-container) {
+  width: 100%;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+:global(.login-b2e) {
+  text-align: center;
+}
+
 :global(.title-b2e h1) {
-    font-size: 24px;
-    line-height: 30px;
-    letter-spacing: 0px;
+    font-size: 20px;
     color: #FFFFFF;
-    text-transform: uppercase;
     text-align: center;
-    font-weight: 400;
+    font-weight: 700;
     margin: 0;
   }
   
-  :global(.title-b2e h1 span) {
-    font-size: 38px;
-    line-height: 48px;
-    font-weight: 800;
+  :global(.title-b2e p) {
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0;
+    margin-top: 1rem;
   }
   
   :global(.bg-funcionario) {
-    background-image: url(/assets/vtex/assets-builder/docol.store-theme/1.0.0/login/bg-login-funcionario.png);
+    background-image: url("./images/bg-login.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     height: 562px;
     display: flex;
     align-items: center;
@@ -24,19 +38,33 @@
   }
   
   :global(.rodape-b2e) {
-    padding-top: 40px;
-    padding-bottom: 10px;
+    padding-block: 37px;
+  }
+
+  :global(.infos-texto) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   
   :global(.infos-texto p) {
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 14px;
     color: #979797;
+    margin: 0;
   }
-  
-  :global(.infos-texto) {
-    padding-top: 10px;
-    border-top: 1px solid #D0D0D0;
+
+  :global(.infos-texto .logos-rodape) {
+    display: flex;
+    gap: 34px;
+  }
+
+  :global(.infos-texto .logo) {
+    display: flex;
+    gap: 14px;
+  }
+
+  :global(.infos-texto .logos-rodape img) {
+    object-fit: cover;
   }
   
   @media (max-width: 991px) {
@@ -61,7 +89,7 @@
   
   @media (max-width: 475px) {
     :global(.bg-funcionario) {
-      background-image: url(/assets/vtex/assets-builder/docol.store-theme/1.0.0/login/bg-login-funcionario-mobile.png);
+      background-image: url("./images/bg-login.png");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
